--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r Math_utils/requirements.txt
 
       - name: Run math_utils tests only
         run: |
-          pytest test_math_utils.py
+          pytest Math_utils/test_math_utils.py
