Added math_utils file to run

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Run math_utils tests only
         run: |
           pytest Math_Utils/test_math_utils.py
+  Run:
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Run math_utils file
         run: |
           python Math_Utils/math_utils.py
