--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -34,4 +34,5 @@ jobs:
     steps:
       - name: Run math_utils file
         run: |
-          python Math_Utils/math_utils.py
+          cd Math_Utils
+          python math_utils.py
