--- a/.github/workflows/aws_resource_reader.yml
+++ b/.github/workflows/aws_resource_reader.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r AWS_Utils/requirements.txt
+          pip install -r aws_resources/requirements.txt
 
       - name: Run aws_resource_reader
         run: python awsresource_reader.py
